# thqml-1.0

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py  thqml.bib
jupyternotebooks/bosonsampling/: BosonSamplingExample1.ipynb  BosonSamplingExample2.ipynb  BosonSamplingExample3.ipynb  BosonSamplingExample4.ipynb  BosonSamplingExample4b.ipynb  BosonSamplingExample5.ipynb  BosonSamplingExample6.ipynb  BosonSamplingExample7.ipynb  BosonSamplingExample8.ipynb  BosonSamplingExample9.ipynb
jupyternotebooks/phasespace/: BellBS.ipynb  beamsplitter.ipynb  coherent.ipynb  coherentcomplex.ipynb  coherentcomplextraining.ipynb  coherentcomplextrainingCOV.ipynb  coherentcomplextrainingDER.ipynb  differentiallayer.ipynb  phasemodulator.ipynb  photoncountinglayer.ipynb  singlemodesqueezer.ipynb  singlemodesqueezerBS.ipynb  symplectic.ipynb  testGaussianLayer.ipynb  twolayersreservoir.ipynb  twomodesqueezer.ipynb  uncertainty.ipynb
jupyternotebooks/quantumfeaturemap/: QAOATwoQubitTransverseFieldIsing.ipynb  QuantumKernelMachineQubits.ipynb  QuantumNeuralStateTwoQubitTransverseFieldIsing.ipynb  QubitsDensityMatrix.ipynb  QubitsGym.ipynb  QubitsMap.ipynb  SingleQubitTransverseFieldIsing.ipynb  TensorsAndVectors.ipynb  (+4 more)
mathematica/: SingleQubitTransverseIsing.nb  TwoQubitTransverseIsing.nb  noncommutative.nb  tensorgaussian.nb
matlabsymbolic/: RqRpJ.m  beamsplitter.m  entanglementBS.m  plot_entanglement_BS.m  squeezedoperator.m  test_RqRp.m  twomodesqueezedoperator.m
thqml/: EntangledFeatureMap.py  __init__.py  phasespace.py  quantummap.py  quantumsolitons.py  utilities.py
(+3 files in other folders)
