[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[project]
name="thqml"
version="1.0.0"
authors=[{name="Claudio Conti", email="nonlinearxwaves@gmail.com"}]
license={file="LICENSE.txt"}
description="Thinking Quantum Machine Learning, code of the book Quantum Machine Learning"
readme="README.md"
requires-python=">=3.10"
classifiers=[
"Programming Language :: Python",
"License :: OSI Approved :: BSD License",
"Operating System :: OS Independent",
]
dependencies=[
"tensorflow==2.11.0",
"typing-extensions",
"jupyter",
"tensorflow_addons",
"keras",
"pydot",
"tdqm",
"keras-utils",
"scikit-learn",
"numpy",
"matplotlib",
"qutip",
]
[projects.urls]
"Homepage" = "https://github.com/nonlinearxwaves/thqml-1.0"
"Author Homepage" = "https://www.newcomplexlight.org"
